# monorepo

./: readme.md  testfile
project1-be/: .docker.env  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py  terraform.tfstate
project1-be/src/: manage.py
project1-be/src/app1/: models.py  tasks.py  views.py
project1-be/src/app1/migrations/: 0001_initial.py
project1-be/src/project1_be/: asgi.py  celery-entrypoint.sh  celery.py  settings.py  urls.py  wsgi.py
project1-be/src/project1_be/entrypoints/: app.sh
project1-be/src/scripts/: test_broker_connection.py
terraform/: .terraform.lock.hcl  README.md  kubernetes.tf  pyproject.toml  tasks.py  variables.tf
terraform/.terraform/modules/: modules.json
terraform/invoke_tasks/: minikube.py  tasks.py  terraform.py
terraform/modules/project1-be/app/: main.tf
terraform/modules/project1-be/broker/: main.tf
terraform/modules/project1-be/database/: main.tf
terraform/modules/project1-be/worker/: main.tf  variables.tf
